--- a/index.html
+++ b/index.html
@@ -1,118 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="author" content="Miles Griffith">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Miles Griffith">
+    <meta name="description" content="CSI443 Website. Text here shows up in search engine results.">
+    <meta name="keywords" content="HTML,CSS,JavaScript">
 
-        <meta name="description" content="CSI443 Web site.  Text here shows up in the description listed in search engine results.">
-        <meta name="keywords" content="HTML,CSS,XML,JavaScript">
-        
-        <title>Miles Griffith</title>
+    <title>Miles Griffith</title>
 
-        <!-- See http://getbootstrap.com for details on how to use these libraries -->
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!-- Internal CSS -->
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <div class="container-fluid">
 
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-
-        <!-- Below is the link to your custom style sheet. -->
-            <!-- link rel="stylesheet" href="../css/style.css" / -->
-
-        <!-- Below is an Internal style that places a border around divs.  USE BORDERS DURING DEVELOPMENT TO SEE WHAT IS GOING ON
-        TURN BORDERS OFF, TURN BORDERS OFF, REPEAT, TURN BORDERS OFF FOR PRODUCTION.  DO NOT LEAVE ANY UNSTYLED BORDERS TURNED ON WHEN YOU PUBLISH YOUR PAGE FOR PUBLIC ACCESS -->
-        <style>
-            div {
-                border: solid;
-            }
-
-            @media only screen and (min-width: 100px) {
-                /* For tablets: */
-
-                /* this will change the container class background to red when tablet*/
-
-                .col {
-                    background-color: lavenderblush;
-                }
-            }
-
-            @media only screen and (min-width: 768px) {
-                /* For desktop: will change the container class to orange*/
-
-                .col {
-                    background-color: lightgray;
-                }
-            }
-
-            @media only screen and (min-width: 992px) {
-                /* For desktop: will change the container class to orange*/
-
-                .col {
-                    background-color: lightgoldenrodyellow;
-                }
-            }
-
-            @media only screen and (min-width: 1200px) {
-                /* For desktop: will change the container class to orange*/
-
-                .col {
-                    background-color: lavender;
-                }
-            }
-
-            Orientation of landscape
-
-            @media only screen and (orientation: landscape) {
-                /* this will change the background to light blue when view is landscape */
-                background-color: lightblue;
-            }
-        </style>
-
-    </head>
-    <body>
-        <div class="container-fluid">
-            <div class="col col-sm-6 col-md-4 col-lg-3 col-xl-12">
-                <img src="img/PhilDuncan.jpg" style="float:left; height:50px; margin:0px;">
-                <p>
-                    Miles Griffith <br>
-                    miles.griffith at bellevuecollege dot edu
+        <!-- Header Section -->
+        <div class="row mb-4">
+            <div class="col-12 d-flex align-items-center">
+                <img src="img/milesgriffith.jpeg" alt="Miles Griffith" class="img-fluid" style="height:250px; margin-right:10px;">
+                <p class="mb-0">
+                    <strong>Miles Griffith</strong><br>
+                    <a href="mailto:miles.griffith@bellevuecollege.edu">miles.griffith@bellevuecollege.edu</a>
                 </p>
-            </div><!-- port 1-->
-
-            <div class="col col-sm-6 col-md-4 col-lg-3 col-xl-12">
-                <p>
-                    <span class="strong">Bio<br></span>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.                         Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </p>
-            </div> <!-- port 2-->
-
-            <div class="col col-sm-6 col-md-4 col-lg-3 col-xl-12 hidden-xs hidden-sm">
-                <p>
-                    <span>Education<br></span>
-                    Bellevue College, AAS-T
-                </p>
-            </div> <!--land 3-->
-
-            <div class="col col-sm-6 col-md-4 col-lg-3 col-xl-12 hidden-xs hidden-sm">
-                Experience<br>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </p>
-            </div><!-- land 3-->
-
-            <!--!div-->
-
-            <div class="row-fluid">
-                <div class="col-sm-6 col-lg-6 hidden-sm hidden-md">
-                <a href="https://plduncanjr.github.io/WebRootArchive/html/MobileResources.html">Mobile Resources</a></div>
-                <div class="col-sm-6 col-lg-6 hidden-sm hidden-md">Web Resources</div>
             </div>
-
-            <!--!div-->
-
         </div>
-    </body>
+
+        <!-- Bio Section -->
+        <div class="row mb-4">
+            <div class="col-12">
+                <h2 class="h5"><strong>Bio</strong></h2>
+                <p>
+                    Hello, I'm Miles Griffith, a 21 year old Software Development student. 
+                    I'm a junior at Bellevue College, currently enrolled in the Software Development Bachelor's program. 
+                    I'm interested in software Development and have been learning since my sophomore year in highschool. 
+                </p>
+                <p>
+                    Outside of school, I enjoy reading various sci-fi and fantasy novels. My favorite webnovel is <i>The Lord of the Mysteries</i> by <i>Yuan Ye</i>.
+                    I also enjoy playing video games and watching movies.
+                </p>
+            </div>
+        </div>
+
+        <!-- Education Section -->
+        <div class="row mb-4">
+            <div class="col-12">
+                <h2 class="h5"><strong>Education</strong></h2>
+                <p>
+                    2022-2024: Associate's degree of Science in Software Development, Bellevue College <br />
+                    2024-2026: Bachelor's degree of Science in Software Development, Bellevue College
+                </p>
+            </div>
+        </div>
+
+        <!-- Experience Section -->
+        <div class="row mb-4">
+            <div class="col-12">
+                <h2 class="h5"><strong>Experience</strong></h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+        </div>
+    </div>
+</body>
 </html>
