--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <!-- Internal CSS -->
     <link rel="stylesheet" href="css/style.css">
 </head>
