--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="../index.html">Home</a>
+                        <a class="nav-link" href="DEV320/index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../html/resources.html">Resources</a>
+                        <a class="nav-link" href="DEV320/html/resources.html">Resources</a>
                     </li>
                 </ul>
             </div>
