redid bootstrap organization

--- a/index.html
+++ b/index.html
@@ -38,37 +38,36 @@
 
     <main>
         <div class="container-fluid">
-            <!-- Header Section -->
+            <!-- Sections -->
             <section class="row">
-                <div class="col-md-12">
+                <!-- Header Section -->
+                <div class="col-md-2">
                     <img src="img/milesgriffith.jpeg" alt="Miles Griffith" class="img-fluid" style="height:250px; margin-right:10px;">
                     <p class="mb-0">
                         <strong>Miles Griffith</strong><br>
                         <a href="mailto:miles.griffith@bellevuecollege.edu">miles.griffith@bellevuecollege.edu</a>
                     </p>
                 </div>
-            </section>
+                <div class="col-md-10">
+                    <!-- Bio Section -->
+                    <div>
+                        <h2 class="h5"><strong>Bio</strong></h2>
+                        <p>Hello, I'm Miles Griffith, a 21-year-old Software Development student. I'm a junior at Bellevue College, currently enrolled in the Software Development Bachelor's program. I'm interested in software development and have been learning since my sophomore year in high school.</p>
+                        <p>Outside of school, I enjoy reading various sci-fi and fantasy novels. My favorite webnovel is <i>The Lord of the Mysteries</i> by <i>Yuan Ye</i>. I also enjoy playing video games and watching movies.</p>
+                    </div>
 
-            <!-- Bio, Education, Experience Sections -->
-            <section class="row">
-                <!-- Bio Section -->
-                <div class="col-md-4">
-                    <h2 class="h5"><strong>Bio</strong></h2>
-                    <p>Hello, I'm Miles Griffith, a 21-year-old Software Development student. I'm a junior at Bellevue College, currently enrolled in the Software Development Bachelor's program. I'm interested in software development and have been learning since my sophomore year in high school.</p>
-                    <p>Outside of school, I enjoy reading various sci-fi and fantasy novels. My favorite webnovel is <i>The Lord of the Mysteries</i> by <i>Yuan Ye</i>. I also enjoy playing video games and watching movies.</p>
-                </div>
+                    <!-- Education Section -->
+                    <div>
+                        <h2 class="h5"><strong>Education</strong></h2>
+                        <p>2022-2024: Associate's degree in Software Development, Bellevue College <br />
+                            2024-2026: Bachelor's degree in Software Development, Bellevue College</p>
+                    </div>
 
-                <!-- Education Section -->
-                <div class="col-md-4">
-                    <h2 class="h5"><strong>Education</strong></h2>
-                    <p>2022-2024: Associate's degree in Software Development, Bellevue College <br />
-                        2024-2026: Bachelor's degree in Software Development, Bellevue College</p>
-                </div>
-
-                <!-- Experience Section -->
-                <div class="col-md-4">
-                    <h2 class="h5"><strong>Experience</strong></h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <!-- Experience Section -->
+                    <div>
+                        <h2 class="h5"><strong>Experience</strong></h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    </div>
                 </div>
             </section>
         </div>
