--- a/Legacy/index.html
+++ b/Legacy/index.html
@@ -9,15 +9,15 @@
     <title>Miles Griffith - Software Development Student</title>
 
     <!-- Bootstrap 3 CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <!-- Internal CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navba                                                     r navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#">Miles Griffith</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,10 +26,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="../DEV320/index.html">Home</a>
+                        <a class="nav-link" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../DEV320/html/resources.html">Resources</a>
+                        <a class="nav-link" href="../html/resources.html">Resources</a>
                     </li>
                 </ul>
             </div>
